Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
-
None
Description
MySQL 8.0 has added the following new events in the MySQL binary log
PARTIAL_UPDATE_ROWS_EVENT
TRANSACTION_PAYLOAD_EVENT
HEARTBEAT_LOG_EVENT_V2
- PARTIAL_UPDATE_ROWS_EVENT is used by MySQL to generate update
statements using JSON_SET, JSON_REPLACE and JSON_REMOVE to make
update of JSON columns more efficient. These events can be
disabled by setting 'binlog-row-value-options=""' - TRANSACTION_PAYLOAD_EVENT is used by MySQL to signal that a
row event is compressed. It an be disably by setting
'binlog_transaction_compression=0'. - HEARTBEAT_LOG_EVENT_V2 is written to the binary log many times
per seconds. It can be ignored by the server.
Attachments
Issue Links
- causes
-
MDEV-40544 Assertion fail / Memory leak in `mariadb-binlog --force-read`
-
- Closed
-
- is blocked by
-
MDEV-35780 MySQL 8 JSON data replication is stopping further replication
-
- Open
-
- is part of
-
MDEV-35642 Support replication from MySQL 8.0 to MariaDB
-
- Stalled
-
- relates to
-
MDEV-20749 Improve error reporting of mysqlbinlog when used with --flashback
-
- Closed
-
-
MDEV-29533 Crash when MariaDB is replica of MySQL 8.0
-
- Closed
-